fix: grader overflow-x updated to initial
In moove moodle theme the horizontal bar when grader have overflow
is at end of the grader div, this bar should be shown for the page
and is not show for the page because overflow-x in card (class of
content container of the pages in moove) have overflow-x hidden.

--- a/style/styles_grader.css
+++ b/style/styles_grader.css
@@ -17,6 +17,16 @@
 .td-grade input {
     width: 50px;
 }
+/**
+ * Moove theme styles needed
+ * @see https://moodle.org/plugins/theme_moove
+ */
+#region-main > .card {
+    overflow-x: initial;
+}
+
+/** End Moove theme styles needed */
+
 
 .td-grade input::-webkit-outer-spin-button,
 .td-grade input::-webkit-inner-spin-button {
